# davenport

./: CHANGELOG.md  MIGRATION_CONTEXT.md  README.md  index.html  package-lock.json  package.json
Downloads/dockyard/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
Downloads/dockyard-v2/electron/: main.cjs
Downloads/dockyard/.github/workflows/: ci.yml  release.yml
Downloads/dockyard/electron/: main.cjs  preload.cjs
Downloads/dockyard/public/: ICONS.md
Downloads/dockyard/src/: App.jsx
crates/: Cargo.toml
crates/davenport-cli/: Cargo.toml
crates/davenport-cli/src/: main.rs
crates/davenport-core/: Cargo.toml
crates/davenport-core/src/: commands.rs  files.rs  fsatomic.rs  index.rs  lib.rs  naming.rs  oplog.rs  project.rs
crates/davenport-core/tests/: acceptance.rs
docs/: Davenport-Handoff-2026-07-14.md  Davenport-UX-Spec-v1.0.docx
electron/: main.cjs  preload.cjs
legacy-electron/: package.json
legacy-electron/electron/: notes-main.cjs
legacy-electron/src/: App.jsx
notes/: davenport-notes.html
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
