[package]
name = "davenport-core"
version = "0.1.0"
edition = "2021"
description = "Davenport core: atomic filesystem ops, deterministic naming, operations log, rebuildable index. No UI dependencies."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
